--- a/app.css
+++ b/app.css
@@ -71,3 +71,14 @@ body {
 .hide {
 	display: none;
 }
+
+.score {
+	font-size: 2rem;
+	font-weight: bold;
+	text-align: center;
+	padding: 10px;
+	margin-top: 5px;
+	background-color: rgb(252, 236, 218);
+	color: rgb(87, 30, 104);
+	border-radius: 5px;
+}
